app/assets/stylesheets/layout/lists/horizontal.css
ul.horizontal {
  overflow: hidden;
  margin-bottom: -1px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}
ul.horizontal, .controls ul {
  list-style: none;
  padding: 0;
}

ul.horizontal.center > li:not(.bio, .genre) {
  text-align: left;
  float: none;
  display: inline-block;
}

@media(max-width: 650px) {
  ul.horizontal {
    text-align: center;
  }
}

